<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_photo">

    <ImageView
        android:id="@+id/ic_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close"
        android:padding="20dp"/>

    <RelativeLayout
        android:id="@+id/reg_log"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/ic_close"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subscribe_title"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </RelativeLayout>
    <FrameLayout
        android:id="@+id/fields"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/reg_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="175dp"
            android:layout_gravity="center"
            android:background="@drawable/base">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/first_name"
                android:layout_marginTop="5dp"
                android:layout_width="280dp"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_marginLeft="15dp"
                    android:id="@+id/name_first"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/subscribe_firstname"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/last_name"
                android:layout_width="280dp"
                android:layout_below="@+id/first_name"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_marginLeft="15dp"
                    android:id="@+id/sub_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/subscribe_lastname"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/emaill"
                android:layout_width="280dp"
                android:layout_below="@+id/last_name"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_marginLeft="15dp"
                    android:id="@+id/email_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/subscribe_email"/>
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>
    </FrameLayout>
    <FrameLayout
        android:layout_below="@+id/fields"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
    <Button
        android:id="@+id/button_subscribe"
        android:layout_width="295dp"
        android:layout_height="50dp"
        android:textSize="18sp"
        android:layout_gravity="top|center"
        android:text="@string/subscribe_title"
        android:background="@color/orange"/>


    </FrameLayout>
</RelativeLayout>